Fix api-key for no-client version

--- a/discovery-api-elements.html
+++ b/discovery-api-elements.html
@@ -212,7 +212,7 @@ that allow accessing them declaratively.
 
         this.elements = [];
 
-        if (this.apiKey) {
+        if (this.apiKey && !this.noClient) {
           global.gapi.client.setApiKey(this.apiKey);
         }
 
