Document behaviors correctly

--- a/discovery-api-elements.html
+++ b/discovery-api-elements.html
@@ -14,7 +14,9 @@ that allow accessing them declaratively.
 @element discovery-api-elements
 @status alpha
 @homepage https://github.com/Scarygami/discovery-api-elements/
-@demo demo/index.html
+@demo demo/index.html Simple demo
+@demo demo/demo-drive.html File upload demo
+@demo demo/demo-endpoints.html Google Cloud Endpoints demo
 -->
 
 <link rel="import" href="../polymer/polymer.html">
