--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 </head>
 <body>
 
-  <iron-component-page src="discovery-api-docs.html" active="discovery-api-elements"></iron-component-page>
+  <iron-component-page></iron-component-page>
 
 </body>
 </html>
