Fix tictactoe demo

--- a/demo/tic-tac-toe.html
+++ b/demo/tic-tac-toe.html
@@ -102,7 +102,7 @@
             <tictactoe-board-getmove
               id="moveRequest"
               body="[[requestBody(board, board.*)]]"
-              response="{{computerMove}}"><tictactoe-board-getmove>
+              response="{{computerMove}}"></tictactoe-board-getmove>
 
             <div id="board">
               <template is="dom-repeat" items="[[board]]">
